Setup pom-file